index/style.scss
@use "style/colors";

:root {
  font-size: 16px;
  --nickname-base-duration: 0.5s;
  --nickname-base-delay: 1.5s;
  --main-header-height: 5rem;
  --main-footer-height: 3rem;
  --main-nav-link-hide-speed: 0.5s;
  --monospace-font: "DM Mono", monospace;
  --main-nav-link-leftmargin: 6rem;

  --main-nav-link-font-size: calc(((100vw * 0.4) + 100vh) / 2 / 5);
  --main-nav-link-margin-left: calc(var(--main-nav-link-font-size) * 0.4);

  --full-terminal-width: calc(63vw);
  --full-terminal-height: calc(40vh);
}

* {
  padding: 0;
  margin: 0;
}

body {
  background-color: #d6d6d6;
  overflow-x: hidden;
  overflow-y: hidden;
}

a:active,
a:link,
a:visited,
a:hover {
  color: unset;
  text-decoration: none;
}

.main-header {
  height: 100vh;
}

.nickname-container {
  display: flex;
  align-items: center;
  justify-content: center;
  pointer-events: none;
  width: inherit;
  height: inherit;
}

.main-footer {
  position: absolute;
  bottom: 0;
  height: var(--main-footer-height);
  width: 100vw;
  display: flex;
  align-items: center;

  // Fuck it... for now. Ain't got time to orchestrate the
  // perfect calc expression. Also, javascript API for CSS
  // is ugly and looks like a backwards compatibility influenced
  // hack, as there aren't enough hacks in the web already.
  // Since the spirit to have is "why the fuck not", why the
  // fuck not throw some 100vh offsets. It even looks good.
  transform: translateY(100vh);
}

.main-footer div {
  display: inline-block;
}

.main-footer .title {
  margin-right: auto;
  margin-left: 1rem;
  font-size: 1.5rem;
  font-family: "Lexend", sans-serif;
  font-weight: 600;
  color: #444;
}

.main-footer .links-container {
  margin-left: auto;
  margin-right: 1rem;
}

.main-nav {
  height: calc(100vh - var(--main-footer-height) - var(--main-header-height));
  display: inline-flex;
  flex-direction: column;
  justify-content: center;
}

.main-nav a {
  margin-left: var(--main-nav-link-margin-left);
  font-size: var(--main-nav-link-font-size);
  line-height: calc(var(--main-nav-link-font-size) * 0.8);
  margin-bottom: calc(var(--main-nav-link-margin-left) * 0.4);
}

.main-nav a > span {
  line-height: inherit;
}

.main-nav a:last-child {
  margin-bottom: 0;
}

.font-sans {
  font-family: "Lexend", sans-serif;
  font-weight: 400;
}

.font-mono {
  font-family: var(--monospace-font);
  font-weight: 500;
  color: #444;
}
.parenthesis {
  font-family: var(--monospace-font);
  font-weight: 500;
}

.links-container {
  display: inline-flex;
  justify-content: center;
  align-items: center;
}

.links-container a {
  display: inline-block;
  height: 1.5rem;
  margin-right: 0.3rem;
}

.links-container a:last-child {
  margin-right: 0;
}

.links-icon {
  height: inherit;
}

.terminal {
  width: 0vw;
  height: 0vh;
  margin-left: var(--main-nav-link-margin-left);
  flex-shrink: 0;
  border-radius: 0rem;
  border-style: solid;
  border-color: #000;
  border-width: 0;
  background: rgba(28, 28, 28, 0.85);
  font-family: var(--monospace-font);
  font-size: 11pt;
  color: #fbf1c7;
  position: relative;
  overflow-wrap: break-word;
  word-break: keep-all;
}

.terminal-text-container {
  overflow: hidden;
  height: inherit;
}

.terminal-cli-command {
  transform: scale(0);
}

.loading-redirect {
  position: absolute;
  right: 0.3rem;
  top: 0.3rem;
  width: 1.5rem;
  /* See https://stackoverflow.com/a/53336754/15493645 */
  /* Equivalent to #d6d6d6 */
  filter: invert(85%) sepia(19%) saturate(16%) hue-rotate(337deg) brightness(94%) contrast(100%);
}

@media screen and (orientation: portrait) {
  :root {
    --nickname-size: calc(85vw);
  }

  .nickname {
    width: var(--nickname-size);
  }
}

@media screen and (orientation: landscape) {
  :root {
    --nickname-size: calc(15vh);
  }

  .nickname {
    height: var(--nickname-size);
  }
}

@media screen and (max-width: 500px) {
  :root {
    --full-terminal-width: calc(100vw - var(--main-nav-link-margin-left) * 2);
  }

  .main-footer .title {
    font-size: 1.2rem;
  }

  .links-container a {
    height: 1.3rem;
    margin-right: 0.5rem;
  }

  .terminal {
    font-size: 9.5pt;
  }

  @media (max-height: 550px) {
    :root {
      --full-terminal-height: calc(30vh);
    }
  }
}

@media screen and (max-width: 350px) {
  :root {
    --main-nav-link-font-size: calc(20vw);
    --main-nav-link-margin-left: 0;
    --full-terminal-width: calc(90vw);
    --full-terminal-height: 250px;
  }

  .main-nav {
    display: flex; // block
    align-items: center;
    width: 100vw;
  }

  .main-nav a {
    margin-bottom: 1rem;
  }

  .terminal {
    font-size: 8pt;
  }

  .main-footer {
    justify-content: center;
    flex-direction: column-reverse;
    height: unset;
  }

  .main-footer .title {
    margin: 0;
    font-size: 1.2rem;
  }

  .main-footer .title-container {
    margin-bottom: 0.5rem;
  }

  .main-footer .links-container {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    width: inherit;
    margin-bottom: 0.4rem;
  }

  .links-container a {
    margin: 0;
    height: 2rem;
  }

  @media (max-height: 550px) {
    :root {
      --full-terminal-height: calc(30vh);
    }
  }
}

@include colors.gruvbox;

